--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ description: "Some short description of your blog can go here." # This will show
 
 # Email / Social media user names used by the minima theme:
 # All of these are optional and can be removed or commented out
-email: "nupurkapoor04@mail.com"
+email: "nupurkapoor04@gmail.com"
 #twitter_username: "twitteruser"
 #github_username: "githubuser"
 #linkedin_username: "linkedinuser"
