--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: "Setting Up a Three-Tier Application with Docker"
+title: "Building a Three-Tier Application with Docker: A Step-by-Step Tutorial"
 author: "Nupur Kapoor"
 description: "Some short description of your blog can go here." # This will show up in places like twitter, linkedin, etc, if you share your sites url as a post.
 
