--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,7 @@
 title: "Building a Three-Tier Application with Docker: A Step-by-Step Tutorial"
 author: "Nupur Kapoor"
-description: "Some short description of your blog can go here." # This will show up in places like twitter, linkedin, etc, if you share your sites url as a post.
+description: "
+In this guide, we'll demonstrate how to establish a three-tier application using Docker. We'll construct a setup with multiple containers, comprising a front-end for presentation, a back-end for application logic, and a database for data storage." # This will show up in places like twitter, linkedin, etc, if you share your sites url as a post.
 
 # Email / Social media user names used by the minima theme:
 # All of these are optional and can be removed or commented out
